# rust-mavlink-codec

./: Cargo.toml
.github/workflows/: test.yml
benches/: bench.rs  compatibility_bench.rs  parser_bench.rs  parser_bench_divan.rs
dev/: rust-mavlink-generated-example.rs
dev_utils/: Cargo.toml
dev_utils/src/: lib.rs
src/: codec.rs  error.rs  lib.rs  parser.rs  rust_mavlink_compatibility.rs  v1.rs  v2.rs
src/mav_types/: field_types.rs  mod.rs  serde_utils.rs
src/mav_types/heartbeat/: mod.rs  serde_impl.rs
src/mav_types/mav_frame/: mod.rs  serde_impl.rs
src/mav_types/mav_header/: mod.rs  serde_impl.rs
src/mav_types/mav_message/: mod.rs
src/mav_types/mav_message/heartbeat/: mod.rs  serde_impl.rs
src/mav_types/mav_message/rc_channels/: mod.rs  serde_impl.rs
tests/: chuncked_decode_test.rs  framed_send_recv.rs
